[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Objects/GUIs/DisplayValues/DisplayValues.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/GUIs/DisplayPoints/DisplayPoints.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Objects/GUIs/DisplayMoney/DisplayMoney.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Converted/MainFontNormal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Objects/GUIs/DisplayWeaponSlot/WeaponSlot.tscn" type="PackedScene" id=5]

[node name="DisplayValues" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DisplayPoints" parent="Control" instance=ExtResource( 2 )]
margin_right = 356.0
margin_bottom = 88.0

[node name="DisplayMoney" parent="Control" instance=ExtResource( 3 )]
margin_left = -29.0
margin_top = 40.0844
margin_right = 30.0
margin_bottom = 79.0844

[node name="GameNotifier" type="Label" parent="Control"]
editor/display_folded = true
modulate = Color( 100, 100, 100, 1 )
anchor_right = 1.0
margin_left = 1.67017
margin_top = 100.211
margin_right = 1.67017
margin_bottom = 139.211
custom_fonts/font = ExtResource( 4 )
text = "Wave"
align = 1
valign = 1

[node name="delayTimer" type="Timer" parent="Control/GameNotifier"]
wait_time = 2.0
one_shot = true

[node name="WeaponSlot" parent="Control" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -76.0
margin_top = -50.0
margin_right = 76.0
margin_bottom = 0.0
[connection signal="timeout" from="Control/GameNotifier/delayTimer" to="." method="_on_delayTimer_timeout"]
